# aiogram-template

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  Language instructions  Makefile  README.md  cookiecutter.json  dashboard.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: __main__.py  config.py  main.py
app/filters/: admin.py  is_admin.py
app/handlers/: __init__.py
app/handlers/admins/: __init__.py  broadcast.py  commands.py
app/handlers/errors/: __init__.py  catcher.py  error_handler.py
app/handlers/private/: __init__.py  default.py  help_.py  start.py
app/handlers/updates/: __init__.py  status.py
app/keyboards/: __init__.py  inline.py
app/keyboards/admin/: inline.py  reply.py
app/keyboards/private/: inline.py  reply.py
app/middlewares/: __init__.py  acl.py  clocks.py  database.py  i18n.py  influxdb.py  locker.py  stats.py  throttling.py
app/models/: __init__.py  base.py  chat.py  operations.py  user.py
app/services/: sync.py
app/states/: admin_states.py
app/utils/: __init__.py  analytics.py  api.py  broadcast.py  chatbase.py  clear_dirs.py  exceptions.py  logger.py  measure.py  set_bot_commands.py  sync.py
app/utils/db/: __init__.py  mongo_storage.py  mongodb.py  my_engine.py
app/utils/markup_constructor/: __init__.py  base.py  inline.py  reply.py
app/utils/misc/: __init__.py  clocks_decorator.py  lock_decorator.py
app/utils/notifications/: new_notify.py  startup_notify.py
locales/: locale.en.yml  locale.ru.yml  main.en.yml  main.ru.yml
scripts/: docker-entrypoint.sh
src/tgbot/: config.py  main.py
src/tgbot/filters/: admin.py
(+36 files in other folders)
