[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["rdfsx <m315498@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.3.4"
loguru = "^0.5.3"
aiofile = "^3.7.2"
aiogram = "^2.18"
beanie = "^1.8.12"
uvloop = "^0.16.0"
ujson = "^5.1.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
aiogram-broadcaster = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
